# Sokoban

./: .gitignore  CMakeLists.txt  README.md  SokobanDevDoc.md  SokobanUserManual.md  SsokobanDevDoc.md  Szokoban - Felhasználó Dokumentáció.html  Szokoban - Felhasználó Dokumentáció.md  Szokoban - Programozói dokumentáció.md  datatypes.c  datatypes.h  game.c  game.h  level.c  level.h  main.c  main.h  move.c  move.h  player.c  player.h  statistics.c  statistics.h
headers/: datatypes.h  game.h  level.h  lib.h  main.h  menu.h  move.h  player.h  statistics.h
levels/: 11XP-Kaitlyn_Gauge.xsb  1899-Amanda_Clayworth.xsb  23V1-Rebecca.xsb  2ZGT-Vanessa_McKiddie.xsb  47PP-Louise_Helling.xsb  70UL-Melanie.xsb  7DHP-Felicia_McCalman.xsb  7WGD-Trisha_Gauge.xsb  8YDP-Victoria.xsb  B5E5-Phoebe.xsb  BXU5-Melissa.xsb  C45P-Celeste_Angelo.xsb  EEBX-Meredith_Angelo.xsb  FID3-Tracy.xsb  FKGX-Teresa.xsb
src/: datatypes.c  game.c  level.c  lib.c  main.c  menu.c  move.c  player.c  players.txt  statistics.c
src/levels/: 4E19-Tiffany_Gauge.xsb  5MA5-Daniella.xsb  6BKD-Hillary.xsb  APL9-Michelle.xsb  BEVH-Cindy.xsb
